Notebook "5. NLP + ML" - update sections about fastText and transformers
Update "global" requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,11 @@ stop-words
 twarc
 wordcloud
 beautifulsoup4
+jusText
 readabilipy
+spacy
+nltk
+fasttext
+transformers
+tensorflow
+transformers[sentencepiece]
